JPA-SPRING/src/main/java/org/example/jpaspring/domain/error/DatabaseError.java
package org.example.jpaspring.domain.error;


public class DatabaseError extends RuntimeException {
    public DatabaseError(String message) {
        super(message);
    }
}
